--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,10 @@ server:
 
 chatgpt:
   url: "https://api.openai.com/v1/chat/completions"
-  token: ""
+  key: ""
   model: "gpt-3.5-turbo"
+
+wechat:
+  public:
+    account:
+      token: "1234poiu"
